chore(test): remove unused vars/imports